--- a/NoteApp/NoteApp.Android/Properties/AndroidManifest.xml
+++ b/NoteApp/NoteApp.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,8 @@
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
     <application android:label="NoteApp.Android" android:theme="@style/MainTheme"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
